# cmeutils

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  README.md  codecov.yml  environment-dev.yml  environment.yml  pyproject.toml  setup.py
.github/workflows/: build.yml  pytest.yml
cme_lab_utils/: gsd_utils.py
cmeutils/: .structure.py.swp  __init__.py  dynamics.py  geometry.py  gsd_utils.py  piecewise linear regression.ipynb  plot_tools.py  plotting.py  polymers.py  rdf.py  sampling.py  structure.py  visualization.py  visualize.py  writers.py
cmeutils/tests/: base_test.py  test_dynamics.py  test_geometry.py  test_gsd.py  test_imports.py  test_plot.py  test_plotting.py  test_sampling.py  test_structure.py  test_visualize.py
cmeutils/tests/assets/: AB-traj.gsd  butanes.gsd  cztptz8fitic_rdf.txt  lj-fluid.gsd  mapping.txt  p3ht-cg.gsd  p3ht.gsd  p3ht.xml  pekk-cg.gsd
cmeutils/tutorials/: 10_5mers.gsd  3_10mers.gsd  cg_snapshot.ipynb  cmeutils-polymer.ipynb  single-chain-20mer.gsd
containers/: dockerfile
ovitomods/: gb.ovmod  gbNo_H_p3ht.ovmod  gbitic.ovmod  gbonebeadpps.ovmod  gbp3ht.ovmod
tests/: test_gsd.py  test_imports.py
